// voiceos.proto - Main VoiceOS accessibility service
//
// Copyright (C) Manoj Jhawar, Intelligent Devices LLC
// Created: 2025-12-28
//
// Replaces: IVoiceOSService AIDL interface

syntax = "proto3";

package com.augmentalis.universalrpc.voiceos;

option java_package = "com.augmentalis.universalrpc.voiceos";
option java_multiple_files = true;

import "avid.proto";

// Command execution request
message CommandRequest {
    string request_id = 1;
    string command_text = 2;
    map<string, string> context = 3;
}

// Command execution result
message CommandResponse {
    string request_id = 1;
    bool success = 2;
    string message = 3;
    string result_json = 4;       // Optional structured result
}

// Service status
message ServiceStatus {
    bool ready = 1;
    bool running = 2;
    string version = 3;
    repeated string enabled_features = 4;
}

// Accessibility action request
message AccessibilityActionRequest {
    string request_id = 1;
    string action_type = 2;       // "back", "home", "recent", "notifications"
    map<string, string> params = 3;
}

// Dynamic command registration
message DynamicCommandRequest {
    string request_id = 1;
    string command_text = 2;
    string action_json = 3;
}

// App learning request
message LearnAppRequest {
    string request_id = 1;
    string package_name = 2;      // Optional, defaults to current app
}

// Learned app info
message LearnedApp {
    string package_name = 1;
    string app_name = 2;
    repeated string commands = 3;
    int64 learned_at = 4;
}

// Service callback events
message VoiceOSEvent {
    string session_id = 1;
    oneof event {
        CommandResponse command_result = 2;
        ServiceStatus status_change = 3;
        ScreenChangeEvent screen_change = 4;
        AccessibilityEvent accessibility_event = 5;
    }
}

message ScreenChangeEvent {
    string package_name = 1;
    string activity_name = 2;
    int64 timestamp = 3;
}

message AccessibilityEvent {
    int32 event_type = 1;
    string package_name = 2;
    string class_name = 3;
    string text = 4;
    int64 timestamp = 5;
}

// Service definition
service VoiceOSService {
    // Check service readiness
    rpc IsReady(IsReadyRequest) returns (ServiceStatus);

    // Execute voice command
    rpc ExecuteCommand(CommandRequest) returns (CommandResponse);

    // Execute accessibility action
    rpc ExecuteAccessibilityAction(AccessibilityActionRequest) returns (CommandResponse);

    // Scrape current screen
    rpc ScrapeCurrentScreen(ScrapeScreenRequest) returns (ScrapeScreenResponse);

    // Start/stop voice recognition
    rpc StartVoiceRecognition(StartVoiceRequest) returns (CommandResponse);
    rpc StopVoiceRecognition(StopVoiceRequest) returns (CommandResponse);

    // App learning
    rpc LearnCurrentApp(LearnAppRequest) returns (LearnedApp);
    rpc GetLearnedApps(GetLearnedAppsRequest) returns (LearnedAppsResponse);
    rpc GetCommandsForApp(GetCommandsRequest) returns (AppCommandsResponse);

    // Dynamic commands
    rpc RegisterDynamicCommand(DynamicCommandRequest) returns (CommandResponse);

    // Event streaming
    rpc StreamEvents(StreamEventsRequest) returns (stream VoiceOSEvent);
}

message IsReadyRequest {
    string request_id = 1;
}

message ScrapeScreenRequest {
    string request_id = 1;
}

message ScrapeScreenResponse {
    string request_id = 1;
    bool success = 2;
    string screen_json = 3;
}

message StartVoiceRequest {
    string request_id = 1;
    string language = 2;
    string recognizer_type = 3;
}

message StopVoiceRequest {
    string request_id = 1;
}

message GetLearnedAppsRequest {
    string request_id = 1;
}

message LearnedAppsResponse {
    repeated LearnedApp apps = 1;
}

message GetCommandsRequest {
    string request_id = 1;
    string package_name = 2;
}

message AppCommandsResponse {
    string package_name = 1;
    repeated string commands = 2;
}

message StreamEventsRequest {
    string request_id = 1;
    repeated string event_types = 2;  // Filter by event types
}
